--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    >
+    xmlns:tools="http://schemas.android.com/tools">
 
 
     <uses-permission
         android:name="android.permission.MANAGE_EXTERNAL_STORAGE"
         tools:ignore="ScopedStorage" />
 
+    <uses-permission android:name="android.permission.INTERNET" />
 
 
     <application
@@ -39,9 +39,6 @@
         <activity android:name=".studentstorage.ManageStudentsActivity" />
         <activity android:name=".threadsample.ThreadActivitySample" />
         <activity android:name=".triangle.TriangleActivity" />
-
-
-
 
 
         <!--
